--- a/modules/web/public/css/main.css
+++ b/modules/web/public/css/main.css
@@ -114,7 +114,7 @@ a {
     display: table;
     clear: both;
     width: 100%;
-    padding-bottom: 20px;
+    margin-bottom: 20px;
 }
 
 #docslist .column {
